fix: adjust vertical alignment for buttons and quantity label in auro counterto match figma designs #1173

--- a/components/counter/src/styles/style.scss
+++ b/components/counter/src/styles/style.scss
@@ -71,4 +71,7 @@
 
 auro-counter-button {
   display: flex;
+  .controlIcon {
+    margin-top: calc(var(--ds-size-25, 0.125rem) * -1);
+  }
 }
